# my-flutter

./: .gitignore  AUDIT_REPORT.md  BUGFIX_CHECKLIST.md  PRODUCTION_READINESS_REVIEW.md  README.md  new-audit.md  pubspec.yaml
.github/workflows/: flutter_build.yml  release.yml
.opencode/skills/asset-optimizer/: SKILL.md
.opencode/skills/cloud-upload-configurator/: SKILL.md
.rovodev/subagents/: cloud-upload.md  file-operations.md  flutter-dev.md  gallery-manifest.md  image-processor.md  riverpod-state.md  rust-ffi.md
hook/: build.dart
integration_test/: app_flow_test.dart
lib/: app.dart  main.dart
lib/constants/: file_constants.dart
lib/controllers/: copy_controller.dart
lib/models/: cloud_account.dart  copy_profile.dart  copy_result.dart  file_item.dart  performance_settings.dart  scheduled_task.dart
lib/providers/: copy_provider.dart  publish_history_provider.dart  settings_provider.dart  upload_provider.dart
lib/screens/: gallery_page.dart  main_screen.dart  publish_page.dart  settings_page.dart
lib/services/: file_operation_service.dart  file_picker_adapter.dart  google_drive_upload_service.dart  profile_service.dart  r2_upload_service.dart  upload_orchestrator.dart
lib/theme/: glass_colors.dart  glass_theme.dart
lib/utils/: file_utils.dart
lib/widgets/: glass_widgets.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
rust/: Cargo.toml
rust/src/: api.rs  file_copy.rs  frb_generated.rs  hash.rs  image_processing.rs  lib.rs  parallel.rs  path_utils.rs
rust/src/platform/: linux.rs  mod.rs  windows.rs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/installer/: hafiportrait.nsi
windows/runner/: Runner.rc  main.cpp
(+17 files in other folders)
