[package]
name = "filecopy_native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.9.0"
tokio = { version = "1", features = ["full"] }
memmap2 = "0.9"
rayon = "1.10"
md-5 = "0.10"
sha2 = "0.10"
walkdir = "2"
crossbeam-channel = "0.5"
anyhow = "1"
log = "0.4"
image = { version = "0.25", default-features = false, features = ["jpeg", "webp"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
